[package]
name = "journal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "journal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["std"]
std = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1"}
anchor-spl = "0.31.1"
